tests/rascal/negative/parse_errors/L3/proc-reserved.ob
MODULE Bla;

BEGIN
  x := PROCEDURE
END Bla.
